testdata/baselines/reference/compiler/tluaGotoIntoLetScope.errors.txt
tluaGotoIntoLetScope.tlua(5,5): error TS100026: Cannot jump into the scope of local 'x'.
tluaGotoIntoLetScope.tlua(8,9): error TS2454: Variable 'x' is used before being assigned.
tluaGotoIntoLetScope.tlua(12,5): error TS100026: Cannot jump into the scope of local 'c'.
tluaGotoIntoLetScope.tlua(15,9): error TS2454: Variable 'c' is used before being assigned.
tluaGotoIntoLetScope.tlua(19,5): error TS100026: Cannot jump into the scope of local 'v'.
tluaGotoIntoLetScope.tlua(22,9): error TS2454: Variable 'v' is used before being assigned.


==== tluaGotoIntoLetScope.tlua (6 errors) ====
    // The jump-into-local-scope rule covers the transitional let/const/local forms
    // too: they declare names that compile to Lua locals.
    declare function log(n: number): void;
    function intoLetScope(): void {
        goto done
        ~~~~~~~~~
!!! error TS100026: Cannot jump into the scope of local 'x'.
        local x = 1;
        ::done::
        log(x);
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
    }
    
    function intoConstScope(): void {
        goto done
        ~~~~~~~~~
!!! error TS100026: Cannot jump into the scope of local 'c'.
        local c = 1;
        ::done::
        log(c);
            ~
!!! error TS2454: Variable 'c' is used before being assigned.
    }
    
    function intoVarScope(): void {
        goto done
        ~~~~~~~~~
!!! error TS100026: Cannot jump into the scope of local 'v'.
        local v = 1;
        ::done::
        log(v);
            ~
!!! error TS2454: Variable 'v' is used before being assigned.
    }
    